gitops/clusters/homelab/apps/public/noco-google-connector-web-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noco-google-connector-web-page
  namespace: public
spec:
  selector:
    app: noco-google-connector-web-page
  ports:
    - port: 80
      targetPort: 80
