gitops/clusters/homelab/apps/public/noco-google-connector-web-page/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: noco-google-connector-web-page
  namespace: public
spec:
  entryPoints:
    - public-web-secure
  routes:
    - match: Host(`noco-google-connector.pavel-usanli.online`)
      kind: Rule
      services:
        - name: noco-google-connector-web-page
          port: 80
  tls:
    certResolver: cloudflare
